--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@
     <string name="enter_note">Enter note</string>
     <string name="add_samples_data">Add Samples Data</string>
     <string name="delete_all">Delete All</string>
+    <string name="delete">Delete</string>
 </resources>
